--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-connect": "~0.6.0"
+    "grunt-contrib-connect": "~0.6.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-coffee": "~0.9.0",
+    "grunt-contrib-sass": "~0.7.1",
+    "grunt-contrib-haml": "~0.1.2"
   }
 }
